refactor(auth): update configuration properties for authentication and JWT